increase heading size and unbold list heading

--- a/sprint/30/fraud/index.html
+++ b/sprint/30/fraud/index.html
@@ -143,7 +143,7 @@ title: "Fraud: year ending December 2017"
         <!-- content -->
         <div class="col col--md-two-thirds col--lg-two-thirds">
 
-          <p class="heading-small">All main sources of fraud data suggest no increase</p>
+          <p class="heading-medium">All main sources of fraud data suggest no increase</p>
           <p>3.2 million fraud offences were measured by the Crime Survey for England and Wales (CSEW). This has not increased from the results of last year’s survey.</p>
           <p>The Crime Survey for England and Wales (CSEW) provides the best indication of the volume of fraud offences directly experienced by individuals in England and Wales. CSEW estimates cover a wide range of fraud offences, including attempts and offences involving a loss, and include incidents not reported to the authorities.</p>
           <p>Recorded crime showed a similar volume of fraud offences in the year ending December 2017 (639,457 offences) compared with the previous year (639,476 offences).</p>
@@ -152,7 +152,7 @@ title: "Fraud: year ending December 2017"
             <p>The number of incidents estimated by the CSEW is substantially higher than the number of incidents referred to the NFIB, as the survey captures a large volume of lower-harm cases that are less likely to have been reported to the authorities.</p>
           </div>
 
-          <p class="heading-small">Small fall in banking and credit industry fraud, cheque, card and online bank account fraud</p>
+          <p class="heading-medium">Small fall in banking and credit industry fraud, cheque, card and online bank account fraud</p>
           <p class="list-heading">Overall offences showed:</p>
           <ul>
             <li>Cifas fell by 7% (down to 283,284 offences)</li>
@@ -165,13 +165,13 @@ title: "Fraud: year ending December 2017"
           <p>Again, this latest decrease in application fraud reported by Cifas follows previous large rises and is thought to reflect a return to normal levels after a spike in reporting in September 2016, as well as banks taking more preventative measures.</p>
           <p>There was a 10% increase in offences reported to Action Fraud. These were driven by increases in “advance fee payment fraud" (up 32% to 52,469 offences) and “consumer and retail fraud” (up 4% to 105,921 offences).</p>
 
-          <p class="heading-small">Rate of fraud in Southern England slightly higher than in Wales or northern England</p>
+          <p class="heading-medium">Rate of fraud in Southern England slightly higher than in Wales or northern England</p>
           <p>The latest police force area data show there was generally less variation in rates of fraud by police force area than for most other types of crime, although rates for force areas in southern England were generally a little higher than those among force areas in Wales or northern England.</p>
 
-          <p class="heading-small">Drop in offences such as investment fraud or charity fraud</p>
+          <p class="heading-medium">Drop in offences such as investment fraud or charity fraud</p>
           <p>The only category of fraud to show a significant change was “other fraud” (down 64%, from 97,000 to 35,000 offences).</p>
 
-          <p class="heading-small">Table 6: Crime Survey for England and Wales fraud - number of incidents for year ending December 2016 and year ending December 2017 with percentage change</p>
+          <p class="heading-medium">Table 6: Crime Survey for England and Wales fraud - number of incidents for year ending December 2016 and year ending December 2017 with percentage change</p>
           <table class="table-v2 margin-top--2 margin-bottom--4">
             <tbody>
               <tr>
