--- a/sprint/30/homicide/index.html
+++ b/sprint/30/homicide/index.html
@@ -152,7 +152,7 @@ title: "Homicide: year ending December 2017"
         <!-- content -->
         <div class="col col--md-two-thirds col--lg-two-thirds">
 
-          <p class="heading-small">Three-year rise in homicides continues</p>
+          <p class="heading-medium">Three-year rise in homicides continues</p>
           <p>Latest police recorded figures show that there were 54 more homicides than the previous year, a 9% increase, to 653.</p>
           <div class="content-box highlight">
             <p>Police recorded crime data are not designated as National Statistics.</p>
@@ -165,13 +165,13 @@ title: "Homicide: year ending December 2017"
           <p>Homicides involving a knife or sharp instrument rose from 209 to 264, an increase of 26% in the last year.</p>
 
 
-          <p class="heading-small">The number of homicides per 1 million people has fallen 17% in the last decade</p>
+          <p class="heading-medium">The number of homicides per 1 million people has fallen 17% in the last decade</p>
           <p>The volume of homicides has generally decreased while the population has grown. </p>
           <p>The homicide rate fell 17% between the year ending March 2007 and the year ending December 2017, from 14 homicides per 1 million of the population to 12 homicides per 1 million, although small increases have been seen in the last two years.</p>
           <p>This contrasts with the trend seen from the early 1960s up to the early 2000s, when the number of homicides  grew faster than the population – from 300 per year to over 800 per year. </p>
 
 
-          <p class="heading-small">2% decrease in death or serious injury caused by unlawful driving</p>
+          <p class="heading-medium">2% decrease in death or serious injury caused by unlawful driving</p>
           <p>In contrast with recent years, police recorded a 2% fall in this sub-category of homicide – 718 offences compared with 732 in the previous three months.</p>
 
 
