--- a/sprint/30/weapons-crime/index.html
+++ b/sprint/30/weapons-crime/index.html
@@ -181,7 +181,7 @@ title: "Weapons Crime: year ending December 2017"
             <div class="panel" id="details-content-1" aria-hidden="false">
               <p class="font-xsmall">England and Wales, year ending March 2003 to year ending December 2017</p>
               <img style="width:100%" src="{{ "/assets/img/charts/weapons_firearm_chart_lg.png" | relative_url }}" class="" alt="">
-              <p class="heading-xsmall">Source: Police recorded crime, Home Office</p>
+              <p class="font-xsmall">Source: Police recorded crime, Home Office</p>
               <h5 class="margin-bottom--1">Download this chart</h5>
               <div class="btn-group margin-bottom--4">
                 <button class="btn btn--primary font-xsmall">
@@ -195,7 +195,7 @@ title: "Weapons Crime: year ending December 2017"
                   </button>
               </div>
               <p>Offences involving firearms increased by 11% (to 6,604) in the year ending December 2017, compared with the previous year (5,945 offences).</p>
-              <p class="font-weight--bold margin-bottom--1">Police recorded a:</p>
+              <p class="list-heading">Police recorded a:</p>
               <ul>
                 <li>12% increase in offences involving handguns (accounting for 46% of the overall increase)</li>
                 <li>21% increase in offences involving unidentified firearms</li>
@@ -220,12 +220,9 @@ title: "Weapons Crime: year ending December 2017"
             <div class="panel" id="details-content-1" aria-hidden="false">
               <p class="list-heading">Other ONS data</p>
               <ul>
-                <li><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/datasets/offencesinvolvingtheuseofweaponsdatatables">Offences involving the use of weapons: data tables</a></br>
-                Further analysis on offences involving knives or sharp instruments and firearms. This includes figures based on a broader definition of the types of firearm involved  –  air rifles, for example.</li>
-                <li><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/datasets/appendixtableshomicideinenglandandwales">Homicide in England and Wales: Appendix tables</a></br>
-                More information on homicides committed using a knife or sharp instrument.</li>
-                <li><a href="https://www.gov.uk/government/statistics/police-recorded-crime-open-data-tables">Home Office knife crime open data table</a></br>
-                A breakdown of offences for each police force and the time series for these data.</li>
+                <li><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/datasets/offencesinvolvingtheuseofweaponsdatatables">Offences involving the use of weapons: data tables</a></li>
+                <li><a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/datasets/appendixtableshomicideinenglandandwales">Homicide in England and Wales: Appendix tables</a></li>
+                <li><a href="https://www.gov.uk/government/statistics/police-recorded-crime-open-data-tables">Home Office knife crime open data table</a></li>
               </ul>
 
               <p class="list-heading">NHS Digital</p>
