--- a/sprint/30/crime-overview/index.html
+++ b/sprint/30/crime-overview/index.html
@@ -150,10 +150,10 @@ title: "Crime overview: year ending December 2017"
         <!-- content -->
         <div class="col col--md-two-thirds col--lg-two-thirds">
 
-          <p class="heading-small">Crime overall has fallen in the last year</p>
+          <p class="heading-medium">Crime overall has fallen in the last year</p>
           <p>Crime estimated by the Crime Survey for England and Wales (CSEW) shows crime overall has fallen in the last year, driven by a 28% decline in computer misuse.</p>
           <p>Most individual types of crime, including violence, have stayed at levels similar to the previous year.</p>
-          <p>When looking at the main types of crime, changes were only seen in:</p>
+          <p class="list-heading">When looking at the main types of crime, changes were only seen in:</p>
           <ul>
             <li>computer misuse offences (28% decrease to 1.37 million offences), which drove the fall in overall CSEW crime</li>
             <li>vehicle-related thefts (17% increase to 929,000 offences)</li>
@@ -162,20 +162,20 @@ title: "Crime overview: year ending December 2017"
           <p>The increase in vehicle-related thefts is supported by a 16% increase in vehicle offences recorded by the police to 452,683 offences; a category that is well reported to the police and thought to be well recorded.</p>
           <p> All other main types of crime measured by the survey showed no change.</p>
 
-          <p class="heading-small">Police recorded rises in knife and gun crime, mainly in large cities</p>
+          <p class="heading-medium">Police recorded rises in knife and gun crime, mainly in large cities</p>
           <p>Police recorded crime data showed evidence of rises in some other categories of crime,  particularly the more harmful, less frequently-occurring offences.</p>
           <div class="content-box highlight">
             <p>Police recorded crime data are not designated as National Statistics. This data can be affected by changes in policing practices and victims’ willingness to report crime.</p>
           </div>
-          <p>The police figures indicate rises in the following types of crime:</p>
+          <p class="list-heading">The police figures indicate rises in the following types of crime:</p>
           <ul>
             <li>offences involving knives or sharp instrument (up 22% to 39,598 recorded offences)</li>
             <li>offences involving firearms (up 11% to 6,604 recorded offences)</li>
           </ul>
           <p>These offences tend to be disproportionately concentrated in London and other metropolitan areas; however, the majority of police force areas saw rises in these types of violent crime.</p>
 
-          <p class="heading-small">More homicides, burglaries and robberies reported</p>
-          <p>Police recorded crime showed rises in:</p>
+          <p class="heading-medium">More homicides, burglaries and robberies reported</p>
+          <p class="list-heading">Police recorded crime showed rises in:</p>
           <ul>
             <li>burglary, which increased by 9% (up to 438,971 offences)</li>
             <li>robbery (up 33% to 74,130 offences)</li>
@@ -192,7 +192,7 @@ title: "Crime overview: year ending December 2017"
           </div>
 
 
-          <p class="heading-small">Likelihood of being a victim has fallen considerably</p>
+          <p class="heading-medium">Likelihood of being a victim has fallen considerably</p>
           <p>Around 4 in 10 adults were estimated to have been a victim of crime in 1995; before the survey included fraud and computer misuse in its coverage.</p>
           <p>In the year ending December 2017, just over 1 in 10 adults were a victim of crimes comparable with those measured in the 1995 survey.</p>
           <p>Including fraud and computer misuse, 2 in 10 adults were a victim of crime in the year ending December 2017.</p>
