--- a/sprint/30/collection/index.html
+++ b/sprint/30/collection/index.html
@@ -88,7 +88,7 @@ title: "Crime collection: year ending December 2017"
               <li class="margin-bottom--4">
                 <p class="margin-bottom--1"><a class="heading-small" href="../fraud">Fraud</a></p>
                 <p class="font-xsmall margin-bottom--1">Released: 26 April 2018</p>
-                <p>Fraud offences involving a loss in England and Wales. Including attempted fraud, cyber crime, computer misuse, false accounting, and banking fraud.</p>
+                <p>Attempted fraud and fraud offences involving a loss in England and Wales. Including cyber crime, computer misuse, false accounting, and banking and credit industry fraud.</p>
               </li>
               <li class="margin-bottom--4">
                 <p class="margin-bottom--1"><a class="heading-small" href="../homicide">Homicide</a></p>
