--- a/sprint/30/weapons-crime/index.html
+++ b/sprint/30/weapons-crime/index.html
@@ -200,7 +200,7 @@ title: "Weapons Crime: year ending December 2017"
                 <li>12% increase in offences involving handguns (accounting for 46% of the overall increase)</li>
                 <li>21% increase in offences involving unidentified firearms</li>
                 <li>20% increase in offences involving shotguns</li>
-                <li>NHS England hospital admissions data also shows increases firearm injuries. This rose from 109 admissions in the year ending March 2016 to 135 admissions in the year ending March 2017.</li>
+                <li>NHS England hospital admissions data also shows increases firearm injuries. This rose from 109 admissions in the year ending March 2016 to 135 admissions in the year ending March 2017</li>
               </ul>
               <p>London's Air Ambulance Data also suggest an increase in serious offences involving a weapon. In 2017, injuries resulting from stabbings and shootings were the most common cause for a helicopter to be dispatched.</p>
             </div>
@@ -280,8 +280,8 @@ title: "Weapons Crime: year ending December 2017"
                 <p><strong>Time periods covered</strong></br>
                 The Crime Survey for England and Wales data on this page are based on interviews conducted between January 2017 and December 2017, measuring peoples’ experiences of crime in the 12 months before the interview.</p>
                 <p>The police recorded crime figures relate to crimes recorded by the police during the year ending December 2017 (between January 2017 and December 2017).</p>
-                <p>“Latest year” (or “latest survey year”) refers to the (survey) year ending December 2017</br>
-                  “previous year” (or “previous survey year”) refers to the (survey) year ending December 2016.</p>
+                <p>“Latest year” (or “latest survey year”) refers to the (survey) year ending December 2017.</br>
+                  “Previous year” (or “previous survey year”) refers to the (survey) year ending December 2016.</p>
 
                 <p><strong>Reporting of knife crime can affect trends</strong></br>
                 Increases in targeted police action in relation to knife crime could lead to more knife crimes being detected by Police Recorded Crime.</p>
