--- a/sprint/30/violent-crime/index.html
+++ b/sprint/30/violent-crime/index.html
@@ -38,7 +38,7 @@ title: "Violent Crime: year ending December 2017"
       <div class="col-wrap">
         <div class="col">
           <h1 class="margin-bottom--1">{{ page.title }}</h1>
-          <p class="margin-top--1 heading-medium font-weight--normal">Violent crime in England and Wales, including minor assaults, harassment and psychological abuse, wounding, physical assault and death</p>
+          <p class="margin-top--1 heading-medium font-weight--normal">Violent crime in England and Wales, including minor assaults, harassment and psychological abuse, wounding, physical assault and death.</p>
         </div>
       </div>
     </div>
@@ -156,7 +156,7 @@ title: "Violent Crime: year ending December 2017"
           <p>This is a return to levels seen preceding the year ending March 2013, following higher levels of reporting in the previous three years.</p>
 
           <p class="heading-medium">Long-term reductions in violent crime supported by other data</p>
-          <p>The longer-term reductions in violent crime shown by the CSEW are backed-up by recent <a href="http://digital.nhs.uk/catalogue/PUB30098">admissions data for NHS hospitals in England</a>.
+          <p>The longer-term reductions in violent crime shown by the CSEW are backed-up by recent <a href="http://digital.nhs.uk/catalogue/PUB30098">admissions data for NHS hospitals</a> in England.
           <p>Assault admissions for the year ending March 20172 (26,450) are 42% lower than the year ending March 2007 (45,890).</p>
           <p>Research conducted by the <a href="http://www.cardiff.ac.uk/__data/assets/pdf_file/0019/1162414/National-Violence-Surveillance-Network-Report-2017.pdf">Violence and Society Research Group at Cardiff University (PDF, 502KB)</a> shows similar findings.
           <p>Their annual survey of a sample of hospital emergency departments and walk-in centres in England and Wales, show that serious violence-related attendances in 2017 have fallen 39% since 2010.</p>
@@ -171,7 +171,7 @@ title: "Violent Crime: year ending December 2017"
           <h2 id="data" class="margin-top--7">Get violent crime data</h2>
           <p>This bulletin mainly reports on data from two sources of crime data: the Crime Survey for England and Wales (CSEW) and police recorded crime.</p>
           <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View all data</a></p>
-          <p>More information on both these sources can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales.</a></p>
+          <p>More information on both these sources can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales</a>.</p>
 
           <details role="group" class="margin-bottom--4 margin-top--1">
             <summary role="button" aria-controls="details-content-1" aria-expanded="true">
