user guide links in glossary

--- a/sprint/30/fraud/index.html
+++ b/sprint/30/fraud/index.html
@@ -265,7 +265,7 @@ title: "Fraud: year ending December 2017"
             <li>National Fraud Intelligence Bureau (NFIB) which collates data from Action Fraud, Cifas and UK Finance</li>
           </ul>
           <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View all data</a></p>
-          <p>More information on both these sources can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales.</a></p>
+          <p>More information on both these sources can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales</a>.</p>
 
           <h2 id="using-data" class="margin-top--7">Using fraud data</h2>
           <div class="js-show-hide">
@@ -338,7 +338,7 @@ title: "Fraud: year ending December 2017"
                 <p><strong>Fraud by false representation</strong><br />Where a person makes a representation that they know to be untrue or misleading. This covers a broad range of fraudulent activity, including dating scams (where the intended victim is befriended by a fraudster online and tricked into sending them money for a variety of emotive reasons), lottery scams (where the potential victim is told they have won a non-existent lottery prize and needs to pay a fee to release the winnings) and inheritance fraud (offering the false promise of an inheritance to trick victims into paying money or sharing bank or credit card details).</p>
                 <p><strong>Banking and payment card frauds</strong><br />The most prevalent type of fraud, usually involving falsely obtaining or using personal bank or payment card details in order to carry out fraudulent transactions.</p>
                 <p><strong>Computer misuse crime </strong><br />Covers any unauthorised access to computer material, as set out in the Computer Misuse Act 1990 (Annex 2 provides further information). This is not limited to desk or laptop computers and can include any device using operating software accessible online, for example, games consoles, smart phones and smart TVs. It includes offences such as the spread of viruses and other malicious software, hacking and distributed denial of service (DDoS) attacks (the flooding of internet servers to take down network infrastructure or websites).</p>
-                <p>A guide to crime types and definitions can be found in the Offence Types section of the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales#offence-types">ONS Crime Statistics User Guide</a>.</p>
+                <p>A comprehensive guide to crime types and definitions can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales#offence-types">User Guide to Crime Statistics for England and Wales</a>.</p>
               </div>
             </div>
           </div>
