--- a/sprint/30/homicide/index.html
+++ b/sprint/30/homicide/index.html
@@ -261,7 +261,7 @@ title: "Homicide: year ending December 2017"
                 <p><strong>Infanticide</strong><br />Defined as the killing of a baby under one year old by their mother while the balance of her mind was disturbed as a result of giving birth. Created by the <a href="http://www.legislation.gov.uk/ukpga/Geo6/1-2/36">Infanticide Act 1922</a> and refined by the Infanticide Act 1938 (section 1).</p>
                 <p><strong>Death by driving offences</strong></br>
                 Include death by dangerous driving, careless or inconsiderate driving, driving under the influence of drink or drugs and while being an unlicensed or uninsured driver.</p>
-                <p>A guide to crime types and definitions can be found in the Offence Types section of the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales#offence-types">ONS Crime Statistics User Guide</a>.</p>
+                <p>A comprehensive guide to crime types and definitions can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales#offence-types">User Guide to Crime Statistics for England and Wales</a>.</p>
               </div>
             </div>
           </div>
