--- a/sprint/30/weapons-crime/index.html
+++ b/sprint/30/weapons-crime/index.html
@@ -209,7 +209,7 @@ title: "Weapons Crime: year ending December 2017"
           <h2 id="data" class="margin-top--7">Get weapons crime data</h2>
           <p>This page mainly reports on data from two sources of crime data: the Crime Survey for England and Wales (CSEW) and police recorded crime.</p>
           <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View all data</a></p>
-          <p>More information on both these sources can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales.</a></p>
+          <p>More information on both these sources can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales</a>.</p>
 
 
 
@@ -324,7 +324,7 @@ title: "Weapons Crime: year ending December 2017"
                 Offences include injury resulting in permanent disability; more than minor permanent disfigurement; broken bones; fractured skull; compound fractures; substantial loss of blood; internal injury; lengthy treatment or serious psychiatric injury (based on expert evidence); and shock (when accompanied by expert psychological evidence).</p>
                 <p><strong>Possession of weapons</strong></br>
                 Includes possession of firearms with intent, possession of firearms offences, possession of other weapons, possession of article with blade or point.</p>
-                <p>A guide to crime types and definitions can be found in the Offence Types section of the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales#offence-types">ONS Crime Statistics User Guide</a>.</p>
+                <p>A comprehensive guide to crime types and definitions can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales#offence-types">User Guide to Crime Statistics for England and Wales</a>.</p>
               </div>
             </div>
           </div>
