--- a/sprint/30/weapons-crime/index.html
+++ b/sprint/30/weapons-crime/index.html
@@ -149,6 +149,8 @@ title: "Weapons Crime: year ending December 2017"
         </div>
         <!-- content -->
         <div class="col col--md-two-thirds col--lg-two-thirds">
+          <!-- hide/show content -->
+
           <details role="group" class="margin-bottom--4 margin-top--3">
             <summary role="button" aria-controls="details-content-1" aria-expanded="true">
               <span class="summary">Knife crime reaches a seven-year-high
@@ -206,6 +208,8 @@ title: "Weapons Crime: year ending December 2017"
             </div>
           </details>
 
+          <!-- data -->
+
           <h2 id="data" class="margin-top--7">Get weapons crime data</h2>
           <p>This page mainly reports on data from two sources of crime data: the Crime Survey for England and Wales (CSEW) and police recorded crime.</p>
           <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View all data</a></p>
@@ -239,7 +243,7 @@ title: "Weapons Crime: year ending December 2017"
             </div>
           </details>
 
-
+          <!-- accordions -->
           <h2 id="using-data" class="margin-top--7">Using weapons crime data</h2>
           <div class="js-show-hide">
             <div class="show-hide show-hide--light background--gallery margin-bottom--2">
@@ -329,6 +333,7 @@ title: "Weapons Crime: year ending December 2017"
             </div>
           </div>
 
+          <!-- more pages -->
 
           <h2 id="more-pages" class="margin-top--7">More pages in this collection</h2>
           <!-- snapshots -->
