--- a/sprint/30/homicide/index.html
+++ b/sprint/30/homicide/index.html
@@ -196,7 +196,7 @@ title: "Homicide: year ending December 2017"
                 The Crime Survey of England and Wales (CSEW) is a survey which asks people whether they have been victims of a crime over the past 12 months.</p>
 
                 <p><strong>Police recorded crime</strong></br>
-                  Police recorded crime is crime that has been reported to the police, and recorded as part of police casework.</p>
+                  Crime that has been reported to the police, and recorded as part of police casework.</p>
                   <div class="content-box highlight">
                     <p>Police recorded crime data are not designated as National Statistics.</p>
                   </div>
@@ -214,7 +214,7 @@ title: "Homicide: year ending December 2017"
               <div class="js-show-hide__content" style="overflow: auto;">
                 <p><strong>Strengths and limitations of the data</strong></br>
                   The Crime Survey of England and Wales (CSEW) is a survey which asks people whether they have been victims of a crime over the past 12 months. The survey has been consistent since 1981 and is the best source to use when looking at trends over time. It is also a better measurement of crimes which are less likely to be reported to the police, such as sexual offences.</p>
-                  <p>Police recorded crime is crime that has been reported to the police and recorded as part of police casework. It can be affected by changes in policing practices and victims’ willingness to report crime.</p>
+                  <p>Crime that has been reported to the police and recorded as part of police casework. It can be affected by changes in policing practices and victims’ willingness to report crime.</p>
                   <p>Police recorded crime is not a useful way to monitor crime trends, and we do not recommend using it for this.</p>
                   <p>It is good for understanding how much work police forces are carrying out.</p>
                   <div class="content-box highlight">
