--- a/sprint/30/homicide/index.html
+++ b/sprint/30/homicide/index.html
@@ -176,7 +176,7 @@ title: "Homicide: year ending December 2017"
 
 
           <h2 id="data" class="margin-top--7">Get homicide data</h2>
-          <p>This page mainly reports on data from two sources of crime data: the Crime Survey for England and Wales (CSEW) and police recorded crime.</p>
+          <p>This page mainly reports on data from the Crime Survey for England and Wales (CSEW) and police recorded crime.</p>
           <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View all data</a></p>
           <p>More information on both these sources can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales</a>.</p>
           <p>The <a href="https://www.ons.gov.uk/redir/eyJhbGciOiJIUzI1NiJ9.eyJpbmRleCI6MSwicGFnZVNpemUiOjEwLCJwYWdlIjoxLCJ1cmkiOiIvcGVvcGxlcG9wdWxhdGlvbmFuZGNvbW11bml0eS9jcmltZWFuZGp1c3RpY2UvZGF0YXNldHMvYXBwZW5kaXh0YWJsZXNob21pY2lkZWluZW5nbGFuZGFuZHdhbGVzIiwibGlzdFR5cGUiOiJyZWxhdGVkZGF0YSJ9.ws97TwMa0gKVDp_h8A7RKJYdoXhdrM8iqdUU_4FKd2Y">Home Office Homicide Index</a> is a separate source of data on homicide in England and Wales. It is published annually, and is a richer source of data than the police recorded crime figures used on this page.</p>
