--- a/sprint/30/violent-crime/index.html
+++ b/sprint/30/violent-crime/index.html
@@ -169,7 +169,7 @@ title: "Violent Crime: year ending December 2017"
           </div>
 
           <h2 id="data" class="margin-top--7">Get violent crime data</h2>
-          <p>This bulletin mainly reports on data from two sources of crime data: the Crime Survey for England and Wales (CSEW) and police recorded crime.</p>
+          <p>This page mainly reports on data from the Crime Survey for England and Wales (CSEW) and police recorded crime.</p>
           <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View all data</a></p>
           <p>More information on both these sources can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales.</a></p>
 
