Changed Strengths and limitations copy

--- a/sprint/30/fraud/index.html
+++ b/sprint/30/fraud/index.html
@@ -296,7 +296,7 @@ title: "Fraud: year ending December 2017"
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
                 <p><strong>Strengths and limitations of the data</strong></br>
-                The Crime Survey of England and Wales (CSEW) is a survey which asks people whether they have been victims of a crime over the past 12 months. The survey has been consistent since 1981 and is the best source to use when looking at trends over time. It is also a better measurement of crimes which are less likely to be reported to the police, such as sexual offences.</p>
+                The Crime Survey of England and Wales (CSEW) has been consistent since 1981 and is the best source to use when looking at trends over time. It is also a better measurement of crimes which are less likely to be reported to the police, such as sexual offences.</p>
                 <p>The CSEW provides the best indication of the volume of fraud offences directly experienced by people. Its estimates cover a range of fraud offences, including attempts and offences involving a loss, and include incidents not reported to the authorities. </p>
                 <p>The number of incidents estimated by the CSEW is substantially higher than the number of incidents referred to the National Fraud Intelligence Bureau (NFIB), as the survey captures a large volume of lower-harm cases that are less likely to have been reported to the authorities.</p>
                 <p>NFIB data will only include crimes that the victim considers serious enough to report to the authorities or where there are viable lines of investigation.</p>
