--- a/sprint/30/homicide/index.html
+++ b/sprint/30/homicide/index.html
@@ -213,12 +213,10 @@ title: "Homicide: year ending December 2017"
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
                 <p><strong>Strengths and limitations of the data</strong></br>
-                  The Crime Survey of England and Wales (CSEW) is a survey which asks people whether they have been victims of a crime over the past 12 months. The survey has been consistent since 1981 and is the best source to use when looking at trends over time. It is also a better measurement of crimes which are less likely to be reported to the police, such as sexual offences.</p>
-                  <p>Crime that has been reported to the police and recorded as part of police casework. It can be affected by changes in policing practices and victims’ willingness to report crime.</p>
-                  <p>Police recorded crime is not a useful way to monitor crime trends, and we do not recommend using it for this.</p>
-                  <p>It is good for understanding how much work police forces are carrying out.</p>
+                  The Crime Survey of England and Wales (CSEW) has been consistent since 1981 and is the best source to use when looking at trends over time. It is also a better measurement of crimes which are less likely to be reported to the police, such as sexual offences.</p>
+                  <p>Police recorded crime is a good measure for understanding how much work police forces are carrying out. It can be affected by changes in policing practices and victims’ willingness to report crime. </p>
                   <div class="content-box highlight">
-                    <p>Police recorded crime data are not designated as National Statistics.</p>
+                    <p>Police recorded crime is not a useful way to monitor crime trends, and we do not recommend using it for this. Police recorded crime data are not designated as National Statistics.</p>
                   </div>
 
                 <p><strong>Time periods covered</strong></br>
