Homicide article links - title and description

--- a/sprint/30/crime-overview/index.html
+++ b/sprint/30/crime-overview/index.html
@@ -294,8 +294,8 @@ title: "Crime overview: year ending December 2017"
             <div class="content-box">
               <ul class="list--neutral margin-top--4">
                 <li>
-                  <p><a class="font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/compendium/focusonviolentcrimeandsexualoffences/yearendingmarch2015/chapter2homicide">Homicide</a></p>
-                  <p>Analysis based on the Home Office Homicide Index. Taken from the ONS Focus on Violent Crime and Sexual Offences: Year ending March 2015.</p>
+                  <p><a class="font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/compendium/focusonviolentcrimeandsexualoffences/yearendingmarch2015/chapter2homicide">ONS Focus on Violent Crime and Sexual Offences: Year ending March 2015</a></p>
+                  <p>The Homicide chapter contains analysis, long-term trends and the circumstances of violence, based on the Home Office Homicide Index.</p>
                 </li>
               </ul>
             </div>
