--- a/sprint/30/crime-overview/index.html
+++ b/sprint/30/crime-overview/index.html
@@ -105,7 +105,7 @@ title: "Crime overview: year ending December 2017"
                 <a href="#analysis">Analysis of crime</a>
               </li>
               <li>
-                <a href="#data">Get crime data</a>
+                <a href="#data">Crime data</a>
               </li>
               <li>
                 <a href="#using-data">How do we measure this?</a>
@@ -197,7 +197,7 @@ title: "Crime overview: year ending December 2017"
           <p>In the year ending December 2017, just over 1 in 10 adults were a victim of crimes comparable with those measured in the 1995 survey.</p>
           <p>Including fraud and computer misuse, 2 in 10 adults were a victim of crime in the year ending December 2017.</p>
 
-          <h2 id="data" class="margin-top--7">Get crime data</h2>
+          <h2 id="data" class="margin-top--7">Crime data</h2>
           <p>This page mainly reports on data from the Crime Survey for England and Wales (CSEW) and police recorded crime.</p>
           <p><a class="btn btn--primary btn--thick link--no-underline font-weight--bold" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/yearendingdecember2017/relateddata">View all data</a></p>
           <p>More information on both these sources can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales</a>.</p>
