--- a/patterns.html
+++ b/patterns.html
@@ -16,7 +16,7 @@ footer: false
     </div>
 
     <div class="col col--md-two-thirds col--lg-two-thirds">
-      <h1>Patterns</h1>
+      <h1 id="section-1">Patterns</h1>
       <h2 id="accordian">Accordian</h2>
       {% include accordian.html %}
       <h2 id="alerts">Alerts</h2>
