toggle content pattern

--- a/patterns.html
+++ b/patterns.html
@@ -19,6 +19,7 @@ footer: false
       <h1 id="section-1">Patterns</h1>
       <h2 id="accordian">Accordian</h2>
       {% include accordian.html %}
+      {% include headline.html %}
       <h2 id="alerts">Alerts</h2>
       {% include alerts/standard-alert.html %}
       <br>
