--- a/prototypes.html
+++ b/prototypes.html
@@ -2,9 +2,9 @@
 layout: prototype
 warning: false
 search: false
-primary-nav: false
-secondary-nav: false
-language-switch: false
+primary-nav: true
+secondary-nav: true
+language-switch: true
 footer: false
 ---
 
