--- a/sprint/1/weapons-crime/index.html
+++ b/sprint/1/weapons-crime/index.html
@@ -1,9 +1,9 @@
 ---
 layout: prototype
 search: false
-primary-nav: false
-secondary-nav: false
-language-switch: false
+primary-nav: true
+secondary-nav: true
+language-switch: true
 footer: true
 title: "Weapons Crime: year ending December 2017"
 ---
@@ -42,21 +42,34 @@ title: "Weapons Crime: year ending December 2017"
         </div>
       </div>
     </div>
-
     <div class="wrapper">
       <div class="col-wrap">
-
-        <div class="col release-data">
-          <p class="font-xsmall margin-bottom--4">
-            <span class="font-weight--bold">Release date:</span> 26 April 2018
-            <br /> <span class="font-weight--bold">Next release:</span> 19 July 2018 (provisional)
-            <br /></P>
-            <p class="font-xsmall"><span class="font-weight--bold">This page is part of the latest collection</span> | <a class="font-color--white font-xsmall astral-link" href="../collection">View all pages in this collection</a> or
-            <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="font-color--white font-xsmall astral-link">view previous collections</a>
+        <div class="col">
+          <div class="warning-text warning-text__white">
+            <span class="warning-text__icon" aria-hidden="false">!</span>
+            <strong class="warning-text__text">
+              <span class="warning-text__assistive">Warning</span>
+              This is part of the latest collection | <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="astral-link font-weight--normal">view previous collections</a>
+            </strong>
+          </div>
         </div>
-
       </div>
     </div>
+<div class="background--haze-transparent">
+    <div class="wrapper margin-top--4">
+      <div class="col-wrap">
+        <div class="col col--md-one-third col--lg-one-third header-meta">
+          <p class="font-xxsmall"><span class="font-weight--bold">Release date:</span><br>26 April 2018</p>
+        </div>
+        <div class="col col--md-one-third col--lg-one-third header-meta">
+          <p class="font-xxsmall"><span class="font-weight--bold">Next release:</span><br>29 September 2018 (provisional)</p>
+        </div>
+        <div class="col col--md-one-third col--lg-one-third header-meta">
+          <p class="font-xxsmall" style="border-right:0;"><span class="font-weight--bold">Lorem ipsum:</span><br>Dolor sit amet</p>
+        </div>
+      </div>
+    </div>
+  </div>
   </div>
 
   <!-- grey banner -->
