Header layout and add full site navigation to pages

--- a/sprint/1/violent-crime/index.html
+++ b/sprint/1/violent-crime/index.html
@@ -1,8 +1,8 @@
 ---
 layout: prototype
-search: false
-primary-nav: false
-secondary-nav: false
+search: true
+primary-nav: true
+secondary-nav: true
 language-switch: false
 footer: true
 title: "Violent Crime: year ending December 2017"
