--- a/sprint/1/weapons-crime/index.html
+++ b/sprint/1/weapons-crime/index.html
@@ -1,6 +1,6 @@
 ---
 layout: prototype
-search: false
+search: true
 primary-nav: true
 secondary-nav: true
 language-switch: true
@@ -42,34 +42,50 @@ title: "Weapons Crime: year ending December 2017"
         </div>
       </div>
     </div>
+
     <div class="wrapper">
+      <div class="col-wrap">
+        <div class="col">
+          <div class="release-data">
+          <p class="panel">
+          <span class="font-weight--bold">This is part of the latest collection</span> <span class="pipe font-weight--normal">|</span>
+          <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="astral-link">view previous collections</a>
+        </p></div>
+        </div>
+      </div>
+    </div>
+
+    <!-- <div class="wrapper margin-bottom--4">
       <div class="col-wrap">
         <div class="col">
           <div class="warning-text warning-text__white">
             <span class="warning-text__icon" aria-hidden="false">!</span>
             <strong class="warning-text__text">
               <span class="warning-text__assistive">Warning</span>
-              This is part of the latest collection | <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="astral-link font-weight--normal">view previous collections</a>
+              This is part of the latest collection <span class="pipe font-weight--normal">|</span> <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="astral-link font-weight--normal">view previous collections</a>
             </strong>
           </div>
         </div>
       </div>
-    </div>
-<div class="background--haze-transparent">
-    <div class="wrapper margin-top--4">
-      <div class="col-wrap">
-        <div class="col col--md-one-third col--lg-one-third header-meta">
-          <p class="font-xxsmall"><span class="font-weight--bold">Release date:</span><br>26 April 2018</p>
-        </div>
-        <div class="col col--md-one-third col--lg-one-third header-meta">
-          <p class="font-xxsmall"><span class="font-weight--bold">Next release:</span><br>29 September 2018 (provisional)</p>
-        </div>
-        <div class="col col--md-one-third col--lg-one-third header-meta">
-          <p class="font-xxsmall" style="border-right:0;"><span class="font-weight--bold">Lorem ipsum:</span><br>Dolor sit amet</p>
+    </div> -->
+
+
+    <div class=" border-top--darkastral background--astraldark-transparent">
+      <div class="wrapper">
+        <div class="col-wrap">
+          <div class="col col--md-one-third col--lg-one-third header-meta">
+            <p class="font-xxsmall">Release date: 26 April 2018</p>
+          </div>
+          <div class="col col--md-one-third col--lg-one-third header-meta">
+            <p class="font-xxsmall">Next release: 29 September 2018</p>
+          </div>
+          <div class="col col--md-one-third col--lg-one-third header-meta">
+            <p class="font-xxsmall" style="border-right:0;">Release frequency: Quarterly</p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
+
   </div>
 
   <!-- grey banner -->
