--- a/sprint/1/weapons-crime/index.html
+++ b/sprint/1/weapons-crime/index.html
@@ -5,7 +5,7 @@ primary-nav: true
 secondary-nav: true
 language-switch: true
 footer: true
-title: "Weapons Crime: year ending December 2017"
+title: "Weapons Crime: year ending December 2017!"
 ---
 
 <main id="main" role="main" tabindex="-1" class="prototype">
