Clear background on panel for latest/not latest pattern

--- a/sprint/1/weapons-crime/index.html
+++ b/sprint/1/weapons-crime/index.html
@@ -47,7 +47,7 @@ title: "Weapons Crime: year ending December 2017"
       <div class="col-wrap">
         <div class="col">
           <div class="release-data">
-          <p class="panel">
+          <p class="panel background--0">
           <span class="font-weight--bold">This is part of the latest collection</span> <span class="pipe font-weight--normal">|</span>
           <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="astral-link">view previous collections</a>
         </p></div>
