remove language switch

--- a/sprint/1/weapons-crime/index.html
+++ b/sprint/1/weapons-crime/index.html
@@ -3,7 +3,7 @@ layout: prototype
 search: true
 primary-nav: true
 secondary-nav: true
-language-switch: true
+language-switch: false
 footer: true
 title: "Weapons Crime: year ending December 2017"
 ---
