--- a/sprint/1/weapons-crime/index.html
+++ b/sprint/1/weapons-crime/index.html
@@ -48,7 +48,7 @@ title: "Weapons Crime: year ending December 2017"
       <div class="col-wrap">
         <div class="col">
           <div class="release-data">
-            <p class="panel panel-small background--0"><span class="font-weight--bold font-xsmall">This is the latest</span></p>
+            <p class="panel panel-small background--0"><span class="font-weight--bold font-xsmall">This page is part of the latest crime collection</span></p>
           </div>
         </div>
       </div>
@@ -84,7 +84,7 @@ title: "Weapons Crime: year ending December 2017"
     <!-- release information -->
     <div class=" border-top--darkastral background--astraldark-transparent">
       <div class="wrapper">
-        <div class="col-wrap">
+        <div class="col-wrap header-meta-wrap">
           <div class="col col--md-one-third col--lg-one-third header-meta">
             <p class="font-xxsmall">Release date: 26 April 2018</p>
           </div>
