--- a/sprint/1/weapons-crime/index.html
+++ b/sprint/1/weapons-crime/index.html
@@ -43,7 +43,7 @@ title: "Weapons Crime: year ending December 2017"
       </div>
     </div>
 
-    <!-- This is the latest  -->
+    <!-- This is the latest panel  -->
     <div class="wrapper">
       <div class="col-wrap">
         <div class="col">
@@ -55,26 +55,26 @@ title: "Weapons Crime: year ending December 2017"
     </div>
 
 
-    <!-- Not latest -->
+    <!-- Not latest panel -->
     <!-- <div class="wrapper">
       <div class="col-wrap">
         <div class="col">
           <div class="release-data">
-            <p class="panel background--0 font-xsmall"><span class="font-weight--bold">This is not the latest</span><span class="pipe font-weight--normal"> | </span> <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="astral-link font-weight--normal font-xsmall">view the latest collection</a></p>
+            <p class="panel panel-small background--0 font-xsmall"><span class="font-weight--bold">This is not the latest</span><span class="pipe font-weight--normal"> | </span> <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="astral-link font-weight--normal font-xsmall">view the latest collection</a></p>
           </div>
         </div>
       </div>
     </div> -->
 
-    <!-- Not latest -->
-    <!-- <div class="wrapper margin-bottom--4">
+    <!-- Not latest icon -->
+    <!-- <div class="wrapper">
       <div class="col-wrap">
         <div class="col">
           <div class="warning-text warning-text__white">
             <span class="warning-text__icon" aria-hidden="false">!</span>
             <strong class="warning-text__text">
               <span class="warning-text__assistive">Warning</span>
-              This is not the latest<span class="pipe font-weight--normal"> | </span> <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="astral-link font-weight--normal font-xsmall">view the latest collection</a>
+              This is not the latest<span class="pipe font-weight--normal"> | </span> <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/bulletins/crimeinenglandandwales/previousReleases" class="astral-link font-weight--normal font-xsmall">view the latest crime collection</a>
             </strong>
           </div>
         </div>
