--- a/patterns.html
+++ b/patterns.html
@@ -24,8 +24,8 @@ footer: false
       {% include alerts/standard-alert.html %}
       <br>
       {% include alerts/info-alert.html %}
-      <br>
       {% include alerts/warning-text.html %}
+      {% include alerts/latest-not-latest.html %}
       {% include back-to-top.html %}
       <h2 id="breadcrumbs">Breadcrumbs</h2>
       {% include breadcrumbs.html %}
