update spelling mistake

--- a/sprint/1/weapons-crime/index.html
+++ b/sprint/1/weapons-crime/index.html
@@ -65,7 +65,7 @@ title: "Weapons Crime: year ending December 2017"
             <p class="font-xxsmall">Release frequency: Quarterly</p>
           </div>
           <div class="col col--md-one-third col--lg-one-third header-meta">
-            <p class="font-xxsmall" style="border-right:0;">Next release: September 2018 (provisonal)</p>
+            <p class="font-xxsmall" style="border-right:0;">Next release: September 2018 (provisional)</p>
           </div>
         </div>
       </div>
