Creating new pattern for inset-text

--- a/patterns.html
+++ b/patterns.html
@@ -39,6 +39,9 @@ footer: false
       <h2 id="headings">Headings</h2>
       {% include headings.html %}
       {% include back-to-top.html %}
+      <h2 id="inset-text">Inset text</h2>
+      {% include inset-text.html %}
+      {% include back-to-top.html %}
       <h2 id="quote">Quote</h2>
       {% include quote.html %}
       {% include back-to-top.html %}
