Finish the warning text pattern and add to the patterns page

--- a/patterns.html
+++ b/patterns.html
@@ -66,6 +66,9 @@ footer: false
       <h2 id="toggle-content">Toggle content</h2>
       {% include toggle-content.html %}
       {% include back-to-top.html %}
+      <h2 id="warning-text">Warning text</h2>
+      {% include warning-text.html %}
+      {% include back-to-top.html %}
     </div>
   </div>
 </div>
