--- a/sprint/2/crime-overview/index.html
+++ b/sprint/2/crime-overview/index.html
@@ -180,8 +180,8 @@ title: "Crime overview: year ending December 2017"
           <p>Police recorded crime data showed evidence of rises in some other categories of crime,  particularly the more harmful, less frequently-occurring offences.</p>
 
           <div class="warning-text">
-            <span class="warning-text__icon" aria-hidden="false">!</span>
-            <strong class="warning-text__text">
+            <span class="warning-text__icon warning-text-large__icon" aria-hidden="false">!</span>
+            <strong class="warning-text__text warning-text-large__text">
               <span class="warning-text__assistive">Warning</span>
               Police recorded crime data are not designated as National Statistics. This data can be affected by changes in policing practices and victims’ willingness to report crime.
             </strong>
@@ -203,8 +203,8 @@ title: "Crime overview: year ending December 2017"
           </ul>
 
           <div class="warning-text">
-            <span class="warning-text__icon" aria-hidden="false">!</span>
-            <strong class="warning-text__text">
+            <span class="warning-text__icon warning-text-large__icon" aria-hidden="false">!</span>
+            <strong class="warning-text__text warning-text-large__text">
               <span class="warning-text__assistive">Warning</span>
               Police recorded crime data are not designated as National Statistics. This data can be affected by changes in policing practices and victims’ willingness to report crime.
             </strong>
@@ -215,8 +215,8 @@ title: "Crime overview: year ending December 2017"
           <p>These figures exclude the London and Manchester terrorist attacks in 2017. They also exclude the 96 cases of manslaughter from the Hillsborough disaster which were recorded in 2016.</p>
 
           <div class="warning-text">
-            <span class="warning-text__icon" aria-hidden="false">!</span>
-            <strong class="warning-text__text">
+            <span class="warning-text__icon warning-text-large__icon" aria-hidden="false">!</span>
+            <strong class="warning-text__text warning-text-large__text">
               <span class="warning-text__assistive">Warning</span>
               Although the deaths at Hillsborough occurred in 1989, an inquest returned a verdict of manslaughter and therefore was recorded as a homicide in the year 2016.
             </strong>
