--- a/sprint/2/labour-market/overview/index.html
+++ b/sprint/2/labour-market/overview/index.html
@@ -5,7 +5,7 @@ primary-nav: true
 secondary-nav: true
 language-switch: false
 footer: true
-title: "Crime overview: year ending December 2017"
+title: "Labour market overview: year ending December 2017"
 ---
 
 <main id="main" role="main" tabindex="-1" class="prototype">
