Make the changes needed for prototype to function without the collections page. Including: - amend breadcrumbs to Home > Taxonomy 1 > Taxonomy 2 > Crime > Sub page - Remove 'return to collection page' link

--- a/sprint/2/crime/violent-crime/index.html
+++ b/sprint/2/crime/violent-crime/index.html
@@ -18,7 +18,16 @@ title: "Violent Crime: year ending December 2017"
             <div class="breadcrumb">
               <ol class="breadcrumb__list margin-bottom--0">
                 <li class="breadcrumb__item__white">
-                  <a class="breadcrumb__link astral-link" href="../collection">Crime collection: year ending December 2017</a>
+                  <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/">Home</a>
+                </li>
+                <li class="breadcrumb__item__white">
+                  <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/peoplepopulationandcommunity">People, population and community</a>
+                </li>
+                <li class="breadcrumb__item__white">
+                  <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice">Crime and justice</a>
+                </li>
+                <li class="breadcrumb__item__white">
+                  <a class="breadcrumb__link astral-link" href="../crime-overview">Crime</a>
                 </li>
                 <li class="breadcrumb__item">
                   Violent Crime
@@ -108,9 +117,6 @@ title: "Violent Crime: year ending December 2017"
       <div class="col-wrap">
         <!-- sticky nav -->
         <div class="col col--md-one-third col--lg-one-third sticky padding-right--1">
-          <div class="icon-box-small margin-top--3">
-            <i class="icon icon-return--dark-small"></i><p><a class="font-xsmall" href="../collection">Return to collection page</a></p>
-          </div>
           <div class="">
             <h2 class="heading-xsmall margin-top--4 margin-bottom--1">On this page:</h2>
             <ul class="section-contents">
