Updated list of prototypes with most recent links and rearranged the page to have to most recent links at the top

--- a/prototypes.html
+++ b/prototypes.html
@@ -13,9 +13,60 @@ footer: false
     <div class="col col--md-one col--lg-one">
       <h1>Prototypes</h1>
 
-      <h2>Sprint 24</h2>
+      <h2>Sprint 2 - latest</h2>
+
+      <h3>Crime</h3>
       <ul>
-        <li><a href="sprint/24/publish-a-dataset">Publish a dataset in Florence</a></li>
+        <li><a href="sprint/2/crime/crime-overview">Crime overview</a></li>
+        <li><a href="sprint/2/crime/weapons-crime">Weapons crime</a></li>
+        <li><a href="sprint/2/crime/fraud">Fraud</a></li>
+        <li><a href="sprint/2/crime/violent-crime">Violent crime</a></li>
+        <li><a href="sprint/2/crime/homicide">Homicide</a></li>
+      </ul>
+
+      <h3>Labour market</h3>
+
+      <h2>Sprint 1</h2>
+      <ul>
+        <li><a href="sprint/1/crime-overview">Crime overview</a></li>
+        <li><a href="sprint/1/weapons-crime">Weapons crime</a></li>
+        <li><a href="sprint/1/fraud">Fraud</a></li>
+        <li><a href="sprint/1/violent-crime">Violent crime</a></li>
+        <li><a href="sprint/1/homicide">Homicide</a></li>
+        <li><a href="sprint/1/collection">Collection page</a></li>
+        <li><a href="sprint/1/Summary-table">Summary table</a></li>
+      </ul>
+
+      <h2>Sprint 30</h2>
+      <ul>
+        <li><a href="sprint/30/crime-overview">Crime overview</a></li>
+        <li><a href="sprint/30/weapons-crime">Weapons crime</a></li>
+        <li><a href="sprint/30/fraud">Fraud</a></li>
+        <li><a href="sprint/30/violent-crime">Violent crime</a></li>
+        <li><a href="sprint/30/homicide">Homicide</a></li>
+        <li><a href="sprint/30/collection">Collection page</a></li>
+        <li><a href="sprint/30/Summary-table">Summary table</a></li>
+      </ul>
+
+      <h2>Sprint 29</h2>
+      <li><a href="sprint/29/crime-overview">Crime overview</a></li>
+      <li><a href="sprint/29/weapons-crime">Weapons crime</a></li>
+      <li><a href="sprint/29/fraud">Fraud</a></li>
+      <li><a href="sprint/29/violent-crime">Violent crime</a></li>
+      <li><a href="sprint/29/Summary-table">Summary table</a></li>
+
+      <h2>Sprint 28</h2>
+      <ul>
+        <li><a href="sprint/28/crime-overview">Crime overview</a></li>
+        <li><a href="sprint/28/weapons-crime">Weapons crime</a></li>
+        <li><a href="sprint/28/fraud">Fraud</a></li>
+        <li><a href="sprint/28/violent-crime">Violent crime</a></li>
+      </ul>
+
+      <h2>Sprint 26</h2>
+      <ul>
+        <li><a href="sprint/26/crime-overview">Crime overview</a></li>
+        <li><a href="sprint/26/weapons-crime">Weapons crime</a></li>
       </ul>
 
       <h2>Sprint 25</h2>
@@ -27,18 +78,9 @@ footer: false
         <li><a href="sprint/25/offences-involving-weapons">Bulletin: Offences involving weapons (iteration 4)</a></li>
       </ul>
 
-      <h2>Sprint 26</h2>
+      <h2>Sprint 24</h2>
       <ul>
-        <li><a href="sprint/26/crime-overview">Crime overview</a></li>
-        <li><a href="sprint/26/weapons-crime">Weapons crime</a></li>
-      </ul>
-
-      <h2>Sprint 28</h2>
-      <ul>
-        <li><a href="sprint/28/crime-overview">Crime overview</a></li>
-        <li><a href="sprint/28/weapons-crime">Weapons crime</a></li>
-        <li><a href="sprint/28/fraud">Fraud</a></li>
-        <li><a href="sprint/28/violent-crime">Violent crime</a></li>
+        <li><a href="sprint/24/publish-a-dataset">Publish a dataset in Florence</a></li>
       </ul>
 
     </div>
