--- a/prototypes.html
+++ b/prototypes.html
@@ -13,7 +13,8 @@ footer: false
     <div class="col col--md-one col--lg-one">
       <h1>Prototypes</h1>
 
-      <h2>Sprint 2 - latest</h2>
+      <h2 class="margin-bottom--0">Sprint 2 - latest</h2>
+      <p>30 August 2018 to 12 September 2018</p>
 
       <h3>Crime</h3>
       <ul>
@@ -26,7 +27,8 @@ footer: false
 
       <h3>Labour market</h3>
 
-      <h2>Sprint 1</h2>
+      <h2 class="margin-bottom--0">Sprint 1</h2>
+      <p>16 August 2018 to 29 August 2018</p></h2>
       <ul>
         <li><a href="sprint/1/crime-overview">Crime overview</a></li>
         <li><a href="sprint/1/weapons-crime">Weapons crime</a></li>
