Removed white boxes from the 'How we measure this?' and 'What do you need to know?' sections. Also removed link to the crime collection page in the 'How do we measure this?' section as the crime collection page no longer exists.

--- a/sprint/2/crime/violent-crime/index.html
+++ b/sprint/2/crime/violent-crime/index.html
@@ -245,12 +245,12 @@ title: "Violent Crime: year ending December 2017"
                   <p class="heading-small">How do we measure this?</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
-                <p>This page is part of our quarterly <a href="../collection">Crime Collection</a>, which relies on two main sources of data.</p>
+                <p>This page is part of our quarterly crime collection, which relies on two main sources of data.</p>
                   <p><strong>Crime Survey of England and Wales</strong></br>
                   The Crime Survey of England and Wales (CSEW) is a survey which asks people whether they have been victims of a crime over the past 12 months.</p>
                   <p><strong>Police recorded crime</strong></br>
                   Crime that has been reported to the police, and recorded as part of police casework.</p>
-                  <div class="content-box highlight"><p>Police recorded crime data are not designated as National Statistics.</p></div>
+                  <p>Police recorded crime data are not designated as National Statistics.</p>
                 <p>More information on both these sources can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/userguidetocrimestatisticsforenglandandwales">User guide to crime statistics for England and Wales</a>.</p>
                 <p>More information on the methodology can be found in the <a href="https://www.ons.gov.uk/peoplepopulationandcommunity/crimeandjustice/methodologies/crimeinenglandandwalesqmi">Crime in England and Wales Quality and Methodology Information report</a>.</p>
                 </div>
@@ -266,9 +266,8 @@ title: "Violent Crime: year ending December 2017"
                 <p><strong>Strengths and limitations of the data</strong></br>
                   The Crime Survey of England and Wales (CSEW) has been consistent since 1981 and is the best source to use when looking at trends over time. It is also a better measurement of crimes which are less likely to be reported to the police, such as sexual offences.</p>
                   <p>Police recorded crime is a good measure for understanding how much work police forces are carrying out. It can be affected by changes in policing practices and victims’ willingness to report crime. </p>
-                  <div class="content-box highlight">
-                    <p>Police recorded crime is not a useful way to monitor crime trends, and we do not recommend using it for this. Police recorded crime data are not designated as National Statistics.</p>
-                  </div>
+
+                  <p>Police recorded crime is not a useful way to monitor crime trends, and we do not recommend using it for this. Police recorded crime data are not designated as National Statistics.</p>
 
                 <p><strong>Time periods covered</strong></br>
                 The Crime Survey for England and Wales data on this page are based on interviews conducted between January 2017 and December 2017, measuring peoples’ experiences of crime in the 12 months before the interview.</p>
