--- a/sprint/2/crime/fraud/index.html
+++ b/sprint/2/crime/fraud/index.html
@@ -306,7 +306,7 @@ title: "Fraud: year ending December 2017"
                   How do we measure this?</p>
               </div>
               <div class="js-show-hide__content" style="overflow: auto;">
-                <p>This page is part of our quarterly <a href="https://bulletin-26.netlify.com/sprint/29/release-pages">Crime Collection</a>. Fraud data comes from:</p>
+                <p>This page is part of our quarterly crime collection. Fraud data comes from:</p>
 
                 <p><strong>Crime Survey of England and Wales</strong></br>
                 The Crime Survey of England and Wales (CSEW) is a survey which asks people whether they have been victims of a crime over the past 12 months.</p>
